# DDVCS

./: .gitignore  CMakeLists.txt  DDVCS_Studies.pc.in  README.md
AnaData/: AnaDDVCS.cc  AnaDDVCSOSG.cc  AnaDDVCSWithAIML.cc  AnaData.cc  AnaElectronDDVCS.cc  CMakeLists.txt  DrawPlots1.cc  OSG_Validate.cc  RunAllFilesOfRun.py  SkimOverAllRuns.py  SkimOverAllRuns_v2.py  TriggerStudy.cc
AnaEPIC/: AnaEPIC.cc  CMakeLists.txt  CompareGrrapeEpic.cc  NotWorkingCode.cc
AnaGEMC/: AnaGEMC.cc  AnaPionRejection.cc  CMakeLists.txt  DrawAngularResolutions.cc  DrawBgr_Estimation.cc  DrawComparison.cc  DrawInclusiveCoincidence.cc  DrawPionRejection.cc  DrawPlots.cc  Draw_ISR_Effects.cc  RunPionDataMany.py  UpdateConstants.cc  compileAnaGEMC.sh  compileAnaPionRejection.sh  compileDrawComparison.sh  compileDrawPionRejection.sh
AnaGEMC/Figs/: mup_ELos_Debugging.C
AnaGEMC/Latex/: .AnaGEMC.tex.kate-swp  AnaGEMC.tex  compileAnaGEMC.sh
AnaGEMC/Pars/: linkPars.py
AnaGrape/: AnaGrape.cc  AnaGrape_22GeV.cc  CMakeLists.txt  DrawAccEffects.cc  DrawPlots.cc  DrawPlots_22GeV.cc  compile_AnaGrape.sh  compile_AnaGrape_22GeV.sh
AnaGrape/Dumps/: Phi_LH_xi_x_Q2_0_0  Phi_LH_xi_x_Q2_0_0_22GeV  Phi_LH_xi_x_Q2_0_1  Phi_LH_xi_x_Q2_0_1_22GeV  Phi_LH_xi_x_Q2_1_0  Phi_LH_xi_x_Q2_1_0_22GeV  Phi_LH_xi_x_Q2_1_1  Phi_LH_xi_x_Q2_1_1_22GeV
AnaGrape/Figs/: Asym_Q2Scan_Bin_0_22GeV_Run_16.root  Asym_Q2Scan_Bin_0_22GeV_Run_18.root  Asym_Q2Scan_Bin_0_Run_17.root  Asym_Q2Scan_Bin_1_22GeV_Run_16.root  Asym_Q2Scan_Bin_1_22GeV_Run_18.root  Asym_Q2Scan_Bin_1_Run_17.root  Asym_Q2Scan_Bin_2_22GeV_Run_16.root  Asym_Q2Scan_Bin_2_22GeV_Run_18.root  Asym_Q2Scan_Bin_2_Run_17.root  Asym_Q2Scan_Bin_3_22GeV_Run_16.root  Asym_Q2Scan_Bin_3_22GeV_Run_18.root  Asym_Q2Scan_Bin_3_Run_17.root  Asym_Qp2Scan_Bin_0_22GeV_Run_16.root  Asym_Qp2Scan_Bin_0_22GeV_Run_18.root  Asym_Qp2Scan_Bin_0_Run_17.root  Asym_Qp2Scan_Bin_1_22GeV_Run_16.root  Asym_Qp2Scan_Bin_1_22GeV_Run_18.root  Asym_Qp2Scan_Bin_1_Run_17.root  Asym_Qp2Scan_Bin_2_22GeV_Run_16.root  Asym_Qp2Scan_Bin_2_22GeV_Run_18.root  Asym_Qp2Scan_Bin_2_Run_17.root  Asym_Qp2Scan_Bin_3_22GeV_Run_16.root  Asym_Qp2Scan_Bin_3_22GeV_Run_18.root  Asym_Qp2Scan_Bin_3_Run_17.root  Asym_xi_x_bins_0_0.root  Asym_xi_x_bins_0_0_22GeV.root  Asym_xi_x_bins_0_1.root  Asym_xi_x_bins_0_1_22GeV.root  Asym_xi_x_bins_1_0.root  Asym_xi_x_bins_1_0_22GeV.root  Asym_xi_x_bins_1_1.root  Asym_xi_x_bins_1_1_22GeV.root  Phi_LH_Q2Scan_Bin_0_22GeV_Run_16.root  Phi_LH_Q2Scan_Bin_0_22GeV_Run_18.root  Phi_LH_Q2Scan_Bin_0_Run_17.root  Phi_LH_Q2Scan_Bin_1_22GeV_Run_16.root  Phi_LH_Q2Scan_Bin_1_22GeV_Run_18.root  Phi_LH_Q2Scan_Bin_1_Run_17.root  Phi_LH_Q2Scan_Bin_2_22GeV_Run_16.root  Phi_LH_Q2Scan_Bin_2_22GeV_Run_18.root  (+163 more)
AnaGrape/Figs/No_RecoilRecuired/: Qp2_vs_Q2_2_Run_2.root  Qp2_vs_Q2_Bin1_Run_2.root  Qp2_vs_Q2_Bin2_Run_2.root  Qp2_vs_Q2_Bin3_Run_2.root  th_P_em2_Run_2.root  th_P_mum2_Run_2.root  th_P_mup2_Run_2.root  th_P_p2_Run_2.root  th_P_p3_Run_2.root  xB_tM2_Run_2.root  xi_vs_x_FixQ2_RUn_2.root  xi_vs_x_FixQp2_RUn_2.root  xi_vs_x_KinBin2_Run_2.root  xi_vs_x_KinBin3_Run_2.root
AnaJPsi/: AnaJPsi.cc  CMakeLists.txt  DebugSkim.cc  DrawPlots.cc  UpdateConstants.cc  compileAnaJPsi.sh  compileDrawPlots.sh  compileUpdateConstants.sh
AnaTwoPeg/: AnaTwoPeg.cc  CMakeLists.txt  compile_AnaTwoPeg.sh
DDVCS_DVCS_xSecCpmpare/: CMakeLists.txt  DrawDVCS_DDVCS_Compare.cc  config_DDVCSOnly_10p6GeV.inp
DVCS_VGG_Results/: CMakeLists.txt  DDVCS_Only_config_3.inp  Draw22GeVPlots.cc  DrawPlots1.cc  DrawTCSPlots.cc  TCS_22Gev_tmp.dt  TCS_Setting1.inp  TCS_Setting_Eg18_Qp2_1p5_TCSOnly.inp  TCS_Setting_Eg8_Qp2_1p5_TCSOnly.inp  TCS_Setting_Eg8_Qp2_1p5_TCSPlusBH.inp  config_1.inp  config_2.inp  config_6GeVReference.inp  config_DDVCSOnly_22GeV.inp  config_DDVCSPlusBH_22GeV.inp  config_DVCSPlusBH_22GeV.inp  config_DVCS_22GeV.inp  config_example.inp  dvcs.out  rafo3bb.inp
KinematicPlots/: CMakeLists.txt  xi_dependence.cc
Mergins/: CMakeLists.txt  MergeRootFiles.cc  compile_MergeRootFiles.sh
RecoilDimensions/: CMakeLists.txt
RecoilDimentions/: CalcRecoilDimensions.cc
SkimPionPair/: CMakeLists.txt  RunManySkims.py  SkimPionPair.cc  SkimSinglePion.cc  SkipPionPair.cc  compile_SkimSinglePion.sh  compile_SkipPionPair.sh  miscCodes.cc
cmake_modules/: FindCLAS12AnaTools.cmake
include/: DDVCSKine.h  DDVCSTools.h  ElectronDDVCSKine.h
src/: DDVCSKine.cc  DDVCSTools.cc  ElectronDDVCSKine.cc
